fix: исправить row-gap для profile__info

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -14,7 +14,7 @@
 @media screen and (max-width: 500px) {
   .profile__info {
     column-gap: 10px;
-    row-gap: 14px;
+    row-gap: 5px;
   }
 }
 
